--- a/server/public/styles/scss/_events.scss
+++ b/server/public/styles/scss/_events.scss
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 0 auto 50px;
 }
 
 .child-selected-wrapper {
